<resources>
    <string name="app_name">ZUN</string>
    <string name="_1">1. Большинство комнатных растений размещает ближе к свету.</string>
    <string name="ukhod">Как ухаживать за цветами?</string>
    <string name="_2">2.Поливают растения отстоявшейся водой комнатной температуры. Летом поливают ежедневно вечером, зимой - реже по утрам. Лейку держат сбоку, чтобы струя воды не вымывала почву.</string>
    <string name="_3">3.Рыхлят палочкой поверхность почвы в горшочке, чтобы к корням поступал воздух. Рыхлить надо осторожно, чтобы не повредить корни растения.</string>
    <string name="_4">4.Вытирают пыль с листьев влажной тряпкой, губкой или кисточкой.</string>
    <string name="_5">5.Растения регулярно опрыскивают водой комнатной температуры.</string>
    <string name="_6">6.Осторожно срезать с растений сухие листья и веточки. Следить за чистотой цветочных горшков и подставок.</string>
    <string name="volosi">Уход за волосами</string>
    <string name="_10">Неблагоприятная экологическая обстановка, питание, частое мытье, укладка, окрашивание, завивка – все это оказывает негативное влияние на наши волосы. И, чтобы сохранить их здоровыми и блестящими, нужен более внимательный, персонализированный и тщательный уход. В этой статье мы расскажем вам 10 простых советов, следуя которым вы сможете узнать, как правильно ухаживать за волосами в домашних условиях</string>
    <string name="_11">1.Подбирать средства для волос надо правильно. От природы у каждого из нас разные волосы, в зависимости от этого под каждый тип волос производится специальная косметика: шампуни, бальзамы и так далее. Важно смотреть, для какого типа волос, то средство, которое вы покупаете.</string>
    <string name="_12">2.После шампуня обязательно наносите на волосы бальзам и/или маску. Бальзамы питают и восстанавливают структуру стержня волоса, укрепляют его, делая эластичным. Благодаря склеиванию чешуек, они облегчают процесс расчесывания. Если у вас жирные волосы, не стоит наносить бальзамы и маски на корни волос, чтобы сохранить чистоту и свежеть волос более длительное время. Достаточно будет наносить бальзам на ¾ всей длины.(На усмотрение родителей).</string>
    <string name="_3_36_37">3.Мойте волосы теплой водой: 36-37 градусов, чтобы не повредить структуру волоса. После мытья сполосните голову прохладной водой – это поможет разгладить кутикулу волос и сделает их послушнее.</string>
    <string name="_13">4.Не стоит слишком часто мыть голову. так как это может привести к истощению, ломкости волоса и активизации сальных желез. Следите за своими волосами и промывайте их только по необходимости.</string>
    <string name="_14">5.Вопреки распростертым советам расчесывать мокрые волосы не стоит, это может поломать волос или вырвать его с корнем.</string>
    <string name="_15">6.Заворачивать мокрые волосы в полотенце тюрбаном – не самое полезное. Это нарушает кровообращение и питание кожи головы.</string>
    <string name="_7_d_3">7.Витамины необходимы для здоровья волос. Для того, чтобы получать необходимое количество витаминов, следите за своим рационом питания. Добавьте в меню лосось, поскольку там витамин D и омега-3 жирные кислоты, а также грецкие орехи, так как в них витамин Е и медь, помогающая сохранить блеск волос. В рацион стоит также включить: сладкий картофель, яйца, шпинат, чечевицу, творог, чернику и птицу. Во всех этих продуктах целая азбука различных полезных элементов: минералов и витаминов, которые вместе с косметическими средствами, помогут вашим волосам оставаться красивыми и шелковистыми.</string>
    <string name="belee">Как гладить бельё?</string>
    <string name="_16">Способы глажки:</string>
    <string name="_1_2">1.Сухой: Таким способом гладят вещи с изнаночной или лицевой стороны. 2.С увлажнением: Изделие сбрызгивают водой или заворачивают во влажное полотенце, а затем проглаживают горячим утюгом.</string>
    <string name="_150_165">Разные ткани требуют определённой температурной обработки, уровня увлажнения и способа разглаживания, поэтому обязательно читайте информацию на этикетке. Синтетические ткани можно обрабатывать только тёплым утюгом с использованием влажной марли для отдельных участков изделия. Лучше всего проглаживать синтетику через подкладочное полотно. Шёлк необходимо увлажнить перед проглаживанием, предварительно завернув изделие на полчаса в мокрую ткань. Ни в коем случае не стоит сбрызгивать шёлковую вещь: впоследствии водяные капли могут проявиться как безобразные пятна. Тёмный шёлк гладьте через тонкую ткань с изнаночной стороны, а вот светлые вещи лучше гладить с лицевой. Подкладочные ткани (сатин, саржа, шёлк) необходимо гладить с изнаночной стороны без увлажнения, чтобы не потерять блеск и не оставить пятен от воды. Джерси лучше всего гладить через влажную марлю или полотно с использованием тёплого утюга. Помните, что этот материал хорошо растягивается. Поэтому старайтесь не деформировать вещь резкими движениями утюга. Шёлк-сырец используется при пошиве портьерных и декоративных изделий. Такой материал проглаживается в увлажнённом состоянии с изнанки очень горячим утюгом. Искусственный шёлк. После стирки лучше всего завернуть в материал, хорошо впитывающий влагу. Гладить надо с изнанки умеренно нагретым утюгом. Махровые изделия не стоит гладить, чтобы сохранить их мягкость и способность хорошо впитывать влагу. Шерсть быстро садится, поэтому изделия из неё утюжат только через влажную ткань с изнаночной стороны при температуре 150–165 °С, аккуратно прикладывая утюг. Если шерстяные вещи при стирке дали усадку, их увлажняют, опрыскивая водой, дают им отлежаться и гладят через тряпку, вытягивая до нужных размеров.</string>
    <string name="_17">Как гладить брюки? Начните гладить с изнанки. Отутюжьте все швы, подкладку и карманы. Выверните брюки на лицевую сторону и через увлажнённую марлю разгладьте верхнюю часть вещи и пояс, переставляя и прижимая утюг. Для удобства выверните карманы.Сложите брюки так, чтобы боковые и внутренние швы совпадали. Сначала прогладьте внутренние стороны брючин, а затем — внешние, хорошо загладив складки. Заутюжьте стрелки. Прижмите утюгом разложенную штанину вверху и внизу, а затем прогладьте оставшуюся часть между этими точками. Чтобы стрелки сохранялись дольше, изнутри их прочерчивают мылом, а снаружи проглаживают через марлю, слегка смоченную уксусом. При этом стрелку простукивают щёткой. Залоснившиеся участки брюк необходимо прогладить, предварительно залив в утюг раствор из одной части воды и двух частей уксуса. Если брюки вытянулись на коленях, деформированные участки нужно хорошенько увлажнить, а после накрыть куском льна и сутюжить ткань до исчезновения пузырей, слегка прикладывая к ним сильно нагретый утюг. Сутюживание нужно начинать с краёв участка, перемещаясь к его середине.</string>
    <string name="_18">Как гладить рубашку? Увлажните рубашку и приготовьте хорошо прогретый утюг. Начните гладить с воротника, выпрямив и отутюжив его сначала с внутренней стороны, а потом с внешней. Рубашки из шерсти, с вышивкой или с отливом нужно гладить влажными и обязательно с изнанки. Так вы сохраните первоначальную красоту вещи и избавитесь от нежелательного блеска. Погладьте манжеты с обеих сторон, предварительно расстегнув и расправив их на гладильной доске. Затем переходите к разглаживанию рукавов, пол и спинки.</string>
    <string name="_19">Как гладить платье и юбку? У платья в первую очередь необходимо отгладить верхнюю часть (вырез, воротник, плечи), во вторую — подол. Глажение юбки начинается с обработки карманов, пояса и верхней части изделия. Затем проглаживают швы, молнию, основную часть и низ изделия. Ткань необходимо гладить поперёк, а затем вдоль, расправляя кончиком утюга образовавшиеся складки. Вертикальные вытачки заутюживаются к середине, а грудные — вниз. Чтобы изделия с гофре и плиссе не потеряли форму, перед стиркой тонкой ниткой свободными стежками прометайте края всех складок. После стирки просушите вещи на вешалке, расправив и потянув в нужном направлении складки. У изделия из толстой ткани подол необходимо гладить крайне аккуратно, не вытягивая ткань и слегка отпаривая место подшивки.</string>
    <string name="_20">Как гладить особо нежные изделия? Перед стиркой кружево пришивают крупными стежками к куску белой ткани, затем стирают, крахмалят и, не дав высохнуть, проглаживают носиком утюга. Важно знать, какие нити входят в состав кружева. Например, ажурные вещи из хлопчатобумажных ниток гладят с изнаночной стороны через мокрую ткань. А вот синтетическое кружево перенесёт только тёплый утюг. Тонкое шёлковое бельё не гладят. Галстуки тоже не рекомендуется утюжить. Освежить внешний вид изделия можно, расправив и обернув его вокруг банки с кипятком.</string>
    <string name="_21">Как завязывать галстук?</string>
    <string name="_22">Самый популярный и простой способ завязать галстук – четверка или четвертной. В некоторых семьях навыки, как завязывать этот узел, передают из поколения в поколение, от отца к сыну. При всех плюсах легкости этой техники, есть один небольшой минус – выделиться из толпы с таким узлом точно не получится. Но в таком случае всегда можно выбрать галстук с интересной фактурой, рисунком или сочетанием цветов.</string>
    <string name="_23">Здесь вы можете подробно ознакомиться со многими способами завязки галстука :</string>
    <string name="https_www_elle_ru_moda_fashion_blog_18_sposobov_zavyazat_galstuk">https://www.elle.ru/moda/fashion-blog/18-sposobov-zavyazat-galstuk/</string>
    <string name="gvozd">Как забить гвоздь?</string>
    <string name="_25">1.Новичкам лучше всего держать гвоздь пассатижами или прищепкой, чтобы не попасть по пальцам.</string>
    <string name="_26">2.Поднесите гвоздь к поверхности, в которую хотите забить гвоздь, для точности можно сделать отметку на ней.</string>
    <string name="_27">3.Быстрыми, резкими ударами забить гвоздь молотком (если на гвоздь нужно что-то повесить, то забивать гвоздь необходимо не до конца).</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Удалить</string>
    <string name="action_delete_all">Удалить всё</string>
    <string name="action_exit">Выйти из приложения</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_theme">Добавить тему</string>
    <string name="title_of_theme">Название темы</string>
    <string name="add_theme123">Добавить</string>
    <string name="contextt">Содержание</string>
    <string name="gender_choice">Пол</string>
    <string name="zun_title">ZUN</string>
</resources>